client/blocks/plugins-update-manager/schedule-form.scss
.schedule-form {
	& > div {
		width: 100%;
	}

	.components-text-control__input {
		border-color: var(--studio-gray-10);
	}

	.components-radio-control__input {
		padding: 0;
		background: transparent;
		border-color: var(--studio-gray-50);

		&[type="radio"]:checked {
			background: transparent;
			border-color: var(--color-text);

			&::before {
				border-color: var(--color-text);
			}
		}
	}

	.components-checkbox-control {
		border-color: var(--studio-gray-50);

		&.disabled {
			.components-checkbox-control__input {
				border-color: var(--studio-gray-10);
			}

			label {
				color: var(--studio-gray-10);
			}
		}
	}

	.components-checkbox-control__input {
		border-color: var(--studio-gray-20);
	}

	.components-search-control {
		margin-bottom: 1.5rem;

		.components-input-control__container {
			border: solid 1px var(--studio-gray-10);
			background-color: var(--studio-white);
		}
	}

	.checkbox-options {
		padding: 1.5rem;
		border: solid 1px var(--studio-gray-10);
		border-radius: 2px;
	}

	.checkbox-options-container {
		max-height: 355px;
		overflow-y: scroll;
		// fixes cut-off box shadow
		margin: -3px;
		padding: 3px;

		> * {
			margin-bottom: 0.875rem;

			&:last-child:not(.components-spinner) {
				margin-bottom: 0;
			}
		}
	}

	.form-field {
		margin-bottom: 3rem;

		&:last-child {
			margin-bottom: 0;
		}

		& > label {
			display: inline-block;
			margin-bottom: 0.5rem;
		}

		label {
			font-size: 0.875rem;
			font-weight: 500;
		}
	}

	.radio-option {
		padding: 1.5rem;

		&.selected {
			border: solid 1px var(--wp-admin-theme-color) !important;
			border-radius: 2px;

			& > .components-radio-control {
				margin-bottom: 1rem;
			}
		}

		&:not(.selected) {
			label {
				color: var(--studio-gray-50);
				font-weight: 400;
			}

			.components-radio-control__input {
				border-color: var(--studio-gray-20);
			}
		}

		&:last-of-type {
			border-bottom: solid 1px var(--color-border-subtle);
			margin-bottom: 1rem;
		}
	}

	.time-controls {
		& > div {
			display: inline-block;

			&:first-child {
				margin-inline-end: 0.5rem;
			}
		}
	}

	.components-text.validation-msg {
		display: block;
		margin-bottom: 0.5rem;
		font-size: 0.75rem;
		color: var(--studio-red-50);

		svg {
			fill: var(--studio-red-50);
			margin-left: 0;
		}
	}

	.components-text.info-msg {
		display: block;
		font-size: 0.75rem;
		margin-bottom: 0.5rem;
	}
}

